gubernatorial quick election intro updated

--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -223,43 +223,45 @@
             </details>
         </div>
 
-        <h4 class="sub-heading-ballot" style="text-align: center;">Quick Election Introduction</h4>
+        <h4 class="sub-heading-ballot" style="text-align: center;">Quick Election Introduction (Updated September 29, 2025)</h4>
         <div class="job-description can-sec">
 
             <details>
                 <summary style="text-align:center; cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
                 <p>
-                As of September 23, 2025, New Jersey’s gubernatorial race is fully underway. 
-                We are well past the primaries that set up <strong>Jack Ciattarelli</strong> as the Republican nominee and <strong>Mikie Sherrill</strong> as 
-                the Democratic nominee. 
-                With mail-in ballots already being cast and the first debate having taken place last Sunday, voters who use early voting are already on a 
-                ticking clock to make their decisions.
+                As of September 29, 2025, New Jersey’s gubernatorial race is fully underway. We are well past the primaries that set up Jack 
+                Ciattarelli as the Republican nominee and Mikie Sherrill as the Democratic nominee. With mail-in ballots already being cast 
+                and the first debate having taken place on September 21, voters who use early voting are already on a ticking clock to make 
+                their decisions.
                 </p>
                 <br><br>
                 <p>
-                The first step for any voter should be to review the candidates’ own source material—campaign websites, social media activity, interviews, and 
-                coverage from established outlets. 
-                Robust statewide reporting of this race exists. 
-                However, for those who prefer a more local lens, here’s what stands out so far for Cumberland County.
+                The first step for any voter should be to review the candidates’ own source material—campaign websites, social media activity, 
+                interviews, and coverage from established outlets. Robust statewide reporting of this race exists. However, for those who 
+                prefer a more local lens, here’s what stands out so far for Cumberland County.
                 </p>
                 <br><br>
                 <p>
-                <em>Jack Ciattarelli</em> has continued making himself present in Cumberland County at public events and recently held a well-advertised 
-                town hall in Pitman, which InformTheVoteNJ attended. 
-                At that event he addressed a Cumberland-specific question by emphasizing the need for agricultural support, a Department of Commerce to help 
-                with economic development, and state agencies that “work for the people.” 
-                This ongoing visibility signals not only that he shows up but also that he is building relationships with local representatives—connections 
-                that could matter if the county needs state-level help.
+                Since January, Ciattarelli has been a consistent presence in the county, showing up at bi-weekly Republican breakfasts, 
+                participating in the Puerto Rican Festival Parade, visiting a local church block party, and appearing in photos from various 
+                politicos’ meetings on Facebook. This steady visibility—combined with his willingness to hold a full town hall in 
+                Pitman—allowed me to pose a direct Cumberland-County-specific question, which he answered on the spot. At the same time, 
+                his campaign has also begun running what some voters and opponents describe as “unfair attack ads” on Sherrill, including 
+                one noting she could not walk at her Naval Academy graduation, as a disciplinary consequence tied to a cheating scandal 
+                involving her class. With down-ballot candidates framing mudslinging as part of 
+                the game, and Sherrill running her own debatable ads, some voters may be unsure how seriously to take the “attacks” versus the 
+                underlying policy stakes.
                 </p>
                 <br><br>
                 <p>
-                By contrast, <em>Mikie Sherrill</em> has only recently begun appearing in the South Jersey landscape. 
-                She made an appearance at the Green Olive 2, which appeared to be an invite-only meeting for leadership, and is reportedly holding a rally at 
-                the Ramada Inn on Saturday the 27th. 
-                A rally, however, typically does not leave much room for press questions, and it is expected she will deliver her statewide stump speech 
-                rather than a Cumberland-specific message. 
-                With ballots already going out and the first debate behind us, Ciattarelli currently shows more presence and connections in the area—at 
-                least in ways visible to the public—while Sherrill’s local outreach remains light.
+                Sherrill, for her part, did make a public campaign stop in Cumberland County this cycle—despite claims from some 
+                local leadership that she would not. That step toward acknowledging our “forgotten county” was welcomed. Still, the bulk of 
+                the event at the Ramada Inn was structured as a rally: pep-talk style speeches, down-ballot candidate introductions, and 
+                volunteer mobilization. Sherrill arrived about 15 minutes before her slot, spoke for roughly 15 minutes, and 
+                departed soon after. Her address dealt mostly with responding to the attack ads, offering anecdotes suited to a rally, 
+                and reiterating positions already found on her website or stated during the first debate. By contrast, Ciattarelli’s 
+                regular county appearances, substance-heavy stump speeches, and willingness to field unscripted questions at his recent 
+                town hall give the appearance of a candidate more connected to and transparent with local voters.
                 </p>
 
                 <br><br>
@@ -283,7 +285,7 @@
                 
 
                 <details>
-                    <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">📋 Click here for full debate description (first 30 minutes) 📋</summary>
+                    <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">📋 Click here for debate description (first 30 minutes) 📋</summary>
                     <br><br>
                     <div style="padding: 15px 25px; text-align: left;">
                         <p>This is the first half-hour of the New Jersey gubernatorial debate between Democrat Mikie Sherrill and Republican Jack Ciattarelli (approx. 2:11:00–2:46:30). The moderators pressed both candidates on affordability, taxes, energy costs, school governance, public safety, and climate. Sherrill emphasized freezing utility rate hikes via a day-one state of emergency, “dashboard/report card” transparency, and consolidations to lower costs; she repeatedly tied Ciattarelli to Trump-era policies. Ciattarelli framed New Jersey as facing crises in affordability, education, public safety, and overdevelopment; he led with tax-cut proposals (retirement income tax-free, property-tax freeze at 70, new lower income brackets) and a “rational” energy transition prioritizing nuclear, natural gas, and rooftop solar while exiting RGGI.</p>
