second sooy wvlt interview added

--- a/child_pages/cc-elections/Candidates/sooy.html
+++ b/child_pages/cc-elections/Candidates/sooy.html
@@ -421,6 +421,232 @@
             </div>
 
             <div class="video-box-modal can-sec">
+                <h3 class="video-heading">2025 InformTheVoteNJ Interview With Joe Sooy</h3>
+
+                <iframe src="https://www.youtube.com/embed/U0EomtjfKAM?si=UF75fa0-Pp_jTIUT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <br><br>
+
+                <details>
+                    <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">
+                        📋 Click here for full interview summary 📋
+                    </summary>
+                    <br><br>
+                    <div style="padding: 15px 25px; text-align: left;">
+                        <p>
+                            In this interview, Millville Commissioner (incumbent) <strong>Joe Sooy</strong> makes an
+                            accomplishment-focused case for continuity. He walks through hands-on cleanups he initiated
+                            (football field move, railroad right-of-way), the new <strong>UEZ-funded Green Team</strong> and
+                            a potential dedicated street sweeper, a mixed but moving slate of <strong>street-paving</strong>
+                            projects (e.g., Wade Blvd. completed; Pleasant Dr. scheduled; Columbia Ave and part of Broad St.
+                            being pursued via grants), and ongoing <strong>technology upgrades</strong> inside City Hall.
+                        </p>
+                        <p>
+                            On finances, he details the <strong>$6M sale of the 15th St. rail-served property</strong>
+                            (marketed and sold, with expansion interest) and explains why much of that one-time revenue went
+                            to settle long-stalled labor contracts—arguing that sustained services now require growing
+                            ratables via <strong>industrial and warehouse development</strong>. He highlights UEZ
+                            <strong>façade grants ($20k)</strong> for visible corridor improvements and calls for better
+                            <strong>citywide marketing coordination</strong> (delayed contract; fragmented calendars).
+                            He pushes back on campaign promises that exceed city authority (e.g., banning Section 8 or
+                            imposing housing moratoria) and notes that some public-safety frustrations (ATVs, bail reform)
+                            are governed at the <strong>state/AG-guideline</strong> level. The through-line: pragmatic
+                            problem-solving, clear limits of local power, and steady execution on projects already in motion.
+                        </p>
+                    </div>
+                </details>
+
+                <br><br>
+
+                <details>
+                    <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">
+                        ⏳ Click to view timestamps, topics, and takeaways ⏳
+                    </summary>
+                    <div class="video-summary" style="margin-top: 1em;">
+                        <h2>Interview Summary – Joe Sooy</h2>
+                        <p>This table highlights the key topics covered in the interview, summarizing major takeaways per section.</p>
+                        <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+                            <thead>
+                                <tr>
+                                    <th style="text-align: left;">Timestamp</th>
+                                    <th style="text-align: left;">Topic</th>
+                                    <th style="text-align: left;">Key Takeaways</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>0:00–2:30</td>
+                                    <td>Hands-on field & park work</td>
+                                    <td>
+                                        After football fields were relocated to Lakeside and a mess was left, Sooy personally started
+                                        cleanup with a chainsaw; city staff followed and finished. Collaborated on court upgrades.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>1:41–2:24</td>
+                                    <td>Railroad cleanup</td>
+                                    <td>
+                                        Volunteers (incl. candidate Dave Summers) removed multiple truckloads; a single phone call secured
+                                        safe track shutdown—example of cutting through “we can’t” culture.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>2:50–4:01</td>
+                                    <td>Cleanups & code enforcement</td>
+                                    <td>
+                                        Neighborhood cleanups build pride; trash often isn’t from owners. Code must notify and allow time
+                                        before fines despite social-media pressure; call the city rather than only posting online.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>4:00–5:35</td>
+                                    <td>UEZ Green Team & street sweeping</td>
+                                    <td>
+                                        New UEZ-funded two-person Green Team with truck; exploring an extra sweeper to free the citywide unit.
+                                        Bringing UEZ in-house saved admin costs.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>5:35–7:09</td>
+                                    <td>Street paving status</td>
+                                    <td>
+                                        Wade Blvd paved; Pleasant Dr scheduled; Laurel Lake segment paused; pursuing grant model (like Bridgeton)
+                                        for Columbia Ave and part of Broad St.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>7:15–9:12</td>
+                                    <td>City tech upgrades</td>
+                                    <td>
+                                        Appropriated funds to replace outdated systems, cameras, and software; modern upgrades are faster and less
+                                        costly than in the past.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>9:15–12:07</td>
+                                    <td>$6M 15th St. sale & expansion</td>
+                                    <td>
+                                        Marketed a rail-served warehouse/office complex; sold for ~<strong>$6M</strong>; buyer interested in adding
+                                        another warehouse—positions area for further ratables.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>10:07–12:20</td>
+                                    <td>One-time money & contracts</td>
+                                    <td>
+                                        Explains why proceeds largely covered long-delayed employee contracts; warns fund balance will be drawn
+                                        down absent new revenue growth.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>11:15–12:07</td>
+                                    <td>Warehouse siting friction</td>
+                                    <td>
+                                        Industrial park buffers exist, but 200-ft notification radius runs to lot lines, which can magnify
+                                        controversy even when buildings sit far from homes.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>12:20–15:01</td>
+                                    <td>Marketing Millville</td>
+                                    <td>
+                                        Marketing contract was delayed; vendor’s business-profile videos help attract more businesses.
+                                        Calls out fragmented calendars and urges better group coordination.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>15:45–17:27</td>
+                                    <td>What is an RFP?</td>
+                                    <td>
+                                        Defines RFP; only one marketing response came in—can’t award to firms that don’t bid; encourages
+                                        local businesses to participate.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>17:55–19:12</td>
+                                    <td>Façade grants (UEZ)</td>
+                                    <td>
+                                        <strong>$20,000 grants</strong> (not loans) to improve storefronts within the UEZ; application path is
+                                        straightforward via the administrator.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>19:15–20:59</td>
+                                    <td>CCUA privatization stance</td>
+                                    <td>
+                                        Opposes selling a well-running sewer utility; references prior push to privatize and urges residents
+                                        to review the history themselves.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>20:15–21:00</td>
+                                    <td>County jail project</td>
+                                    <td>
+                                        Project once underway was halted—“millions” wasted; now moving toward a two-county authority with taxing
+                                        power—concerns about unelected control.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>21:05–24:05</td>
+                                    <td>Promises vs. authority & costs</td>
+                                    <td>
+                                        City cannot ban Section 8 or impose housing moratoria; more police alone won’t fix crime without
+                                        state-level changes. Full-time econ-dev director likely needs salary, benefits, and program budget.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>24:45–26:47</td>
+                                    <td>ATVs, bail reform & the state</td>
+                                    <td>
+                                        Many enforcement policies flow from the Governor/AG guidelines; urges voters to follow state races
+                                        and policy-setters, not only local officials.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>27:00–30:18</td>
+                                    <td>Realistic campaigning & community</td>
+                                    <td>
+                                        Cautions against promising what cities can’t do; endorses doing tangible things (cleanups) that build
+                                        pride and results.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>30:20–33:45</td>
+                                    <td>Access vs. fundraisers</td>
+                                    <td>
+                                        Notes difference between meet-and-greets and pay-to-attend fundraisers; plugs an
+                                        <strong>Oct. 11, Glasstown Brewing</strong> open meet-and-greet concept for all 19 candidates.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>33:45–36:00</td>
+                                    <td>Money in local races</td>
+                                    <td>
+                                        Admits shifting to accept donations after seeing opponents’ fundraising; frames it as necessary
+                                        to compete.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>37:20–38:48</td>
+                                    <td>Candidate responsiveness</td>
+                                    <td>
+                                        Points out some candidates haven’t engaged with interviews; raises questions about transparency
+                                        and voter-facing accessibility.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>39:00–End</td>
+                                    <td>Closing notes</td>
+                                    <td>
+                                        Community flavor (Baby Show); crowded race dynamics; reminder voters can select up to five—or fewer.
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </details>
+                </div>
+
+            <div class="video-box-modal can-sec">
                 <h3 class="video-heading">“The Race to Millville City Commission” — JT Burks Interview with Joe Sooy (2025)</h3>
 
                 <iframe src="https://www.youtube.com/embed/Ot7sX1Myz1A?si=7dk8_Fl6jLPeI3J1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
