sooy page updates

--- a/child_pages/cc-elections/Candidates/sooy.html
+++ b/child_pages/cc-elections/Candidates/sooy.html
@@ -969,6 +969,20 @@
                 </details>
                 </li>
 
+                <br>
+
+                <li>
+<details>
+    <summary style="color: blue;"><strong>Marketing Coordination Across Groups</strong></summary>
+    <p>
+    Sooy highlights that many community groups act in silos, often competing for funds and holding overlapping events without
+    coordination. He argues that a centralized calendar and better collaboration would prevent duplication and strengthen the
+    city’s overall marketing impact. He supports moving beyond “insular marketing” so that businesses and organizations can amplify
+    one another rather than working at cross purposes.
+    </p>
+</details>
+</li>
+
             </ul>
             </div>
 
@@ -1031,6 +1045,174 @@
 
             <br><br>
 
+            <h4 class="sub-heading">Accomplishments</h4>
+<div class="experience can-sec">
+    <ul>
+
+        <li>
+        <details>
+            <summary style="color: blue;"><strong>Hands-On Blight & Parks Work</strong></summary>
+            <p>
+            Personally jump-started the Lakeside football-field cleanup (showed up with a chainsaw; mobilized public works to finish).
+            Organized a railroad right-of-way cleanup with volunteers (including candidate Dave Summers), removing multiple truckloads
+            after coordinating a safe temporary track shutdown with the railroad.
+            </p>
+        </details>
+        </li>
+
+        <br>
+
+        <li>
+        <details>
+            <summary style="color: blue;"><strong>UEZ Brought In-House & Green Team Launch</strong></summary>
+            <p>
+            Shifted UEZ administration in-house (saving ~<em>$50,000</em> in administrative costs) and established a UEZ-funded
+            two-person <strong>Green Team</strong> with a truck to keep the zone clean; exploring a dedicated UEZ street sweeper to free
+            the citywide unit.
+            </p>
+        </details>
+        </li>
+
+        <br>
+
+        <li>
+        <details>
+            <summary style="color: blue;"><strong>Roads: Completed, Scheduled, and Funded</strong></summary>
+            <p>
+            Completed paving on <strong>Wade Boulevard</strong>; scheduled <strong>Pleasant Drive</strong>; initiated a grant-driven
+            approach like Bridgeton’s to pave <strong>Columbia Avenue</strong> and a segment of <strong>Broad Street</strong>.
+            Began work in underserved <strong>Laurel Lake</strong> (noting a pause outside his control).
+            </p>
+        </details>
+        </li>
+
+        <br>
+
+        <li>
+        <details>
+            <summary style="color: blue;"><strong>City Hall Modernization</strong></summary>
+            <p>
+            Appropriated funds to replace outdated computer systems, cameras, and software—accelerating upgrades that improve basic
+            operations and service delivery.
+            </p>
+        </details>
+        </li>
+
+        <br>
+
+        <li>
+        <details>
+            <summary style="color: blue;"><strong>$6M Fifteenth Street Sale & Industrial Momentum</strong></summary>
+            <p>
+            Marketed and sold a rail-served warehouse/office complex for approximately <strong>$6 million</strong>; fielded interest in
+            an additional warehouse on site. Used proceeds to resolve long-stalled labor contracts while pressing forward on new
+            ratables; previews a <strong>groundbreaking</strong> on a major project next month.
+            </p>
+        </details>
+        </li>
+
+        <br>
+
+        <li>
+        <details>
+            <summary style="color: blue;"><strong>Storefront Revitalization Tool</strong></summary>
+            <p>
+            Promoted <strong>$20,000 UEZ façade grants</strong> (grants, not loans) to catalyze visible storefront improvements and
+            corridor upgrades, with a straightforward administrator-guided application path.
+            </p>
+        </details>
+        </li>
+
+        <br>
+
+        <li>
+        <details>
+            <summary style="color: blue;"><strong>Infrastructure Stewardship: CCUA & Jail Positioning</strong></summary>
+            <p>
+            Publicly opposed privatizing a well-performing sewer utility (CCUA). Flagged the fiscal impact of the halted county jail
+            project and explained the implications of the new two-county authority’s taxing power—framing himself as a protector of
+            core infrastructure and prudent process.
+            </p>
+        </details>
+        </li>
+
+    </ul>
+</div>
+
+<br>
+<br>
+
+<h4 class="sub-heading">Comparison to other candidates</h4>
+<div class="experience can-sec">
+    <ul>
+
+        <li>
+        <details>
+            <summary style="color: blue;"><strong>Promises vs. Actual Authority</strong></summary>
+            <p>
+            Draws a bright line between what Millville can legally do and what sounds good on the trail. Counters proposals such as
+            “no more Section 8” or blanket housing moratoria as beyond city power; emphasizes focusing on tools that <em>do</em> exist
+            (UEZ, targeted grants, code, partnerships) and on state-level advocacy when laws or AG guidelines control outcomes.
+            </p>
+        </details>
+        </li>
+
+        <br>
+
+        <li>
+        <details>
+            <summary style="color: blue;"><strong>Economic Development: Costing the Back-Office</strong></summary>
+            <p>
+            While some competitors call for a full-time Economic Development Director immediately, Sooy itemizes recurring costs
+            (salary, benefits, and a workable program budget) and argues to <em>sequence</em> the hire after landing more ratables—so
+            the role is sustainably funded rather than added to the tax rate.
+            </p>
+        </details>
+        </li>
+
+        <br>
+
+        <li>
+        <details>
+            <summary style="color: blue;"><strong>Industrial Growth vs. “Not In My Backyard”</strong></summary>
+            <p>
+            Where others lean away from warehousing/industrial expansion, he argues Millville’s industrial park layout and buffers
+            make growth compatible with nearby uses, and explains how 200-ft notice rules (measured to lot lines) can inflate
+            controversy even when buildings sit far from homes.
+            </p>
+        </details>
+        </li>
+
+        <br>
+
+        <li>
+        <details>
+            <summary style="color: blue;"><strong>Utility Privatization & County Projects</strong></summary>
+            <p>
+            Distinguishes himself from candidates previously tied to <em>privatizing</em> the sewer utility or halting the county jail
+            build—positions he says cost “millions” and risk long-term control of essential services.
+            </p>
+        </details>
+        </li>
+
+        <br>
+
+        <li>
+        <details>
+            <summary style="color: blue;"><strong>Access & Transparency</strong></summary>
+            <p>
+            Notes that not all candidates engage with interviews or open forums. He supports broad, low-barrier meet-and-greets for
+            all 19 candidates (separate from fundraisers) so voters can compare positions without paywalls.
+            </p>
+        </details>
+        </li>
+
+    </ul>
+</div>
+
+<br>
+<br>
+
             <h4 class="sub-heading">Background and Experience</h4>
             <div class="experience can-sec">
             <ul>
@@ -1068,6 +1250,20 @@
                     </p>
                 </details>
                 </li>
+
+                <br>
+
+                <li>
+<details>
+    <summary style="color: blue;"><strong>PAC Leadership & State-Level Access</strong></summary>
+    <p>
+    As chair of a union Political Action Committee (PAC), Sooy directly experienced how campaign finance intersects with access to
+    state leaders. He recounts navigating donation channels to secure face time with Governor Christie and others, illustrating a
+    practical understanding of how higher-level politics functions. This background informs his skepticism of “big money” in local
+    races, while also explaining why he views competitive fundraising as a reality of modern campaigns.
+    </p>
+</details>
+</li>
             </ul>
             </div>
 
